написал аналит ко второй лабе

--- a/info_sec/labs/lab_02/report/03-introduction.tex
+++ b/info_sec/labs/lab_02/report/03-introduction.tex
@@ -1,12 +1,12 @@
 \chapter*{ВВЕДЕНИЕ}
 \addcontentsline{toc}{chapter}{ВВЕДЕНИЕ}
 
-Целью данной лабораторной работы является программная реализация аналога шифровальной машины <<Энигма>>.
+Целью данной лабораторной работы является реализация программы шифрования симметричным алгоритмом DES с применением режима PCBC.
 
 Для достижения поставленной цели необходимо решить следующие задачи:
 
 \begin{enumerate}[label={\arabic*)}]
-	\item описать алгоритм работы шифровальной машины <<Энигма>>;
+	\item описать алгоритм DES с режимом PCBC;
 	\item выбрать средства программной реализации;
 	\item реализовать данный алгоритм.
 \end{enumerate}
