--- a/info_sec/labs/lab_02/report/biblio.bib
+++ b/info_sec/labs/lab_02/report/biblio.bib
@@ -8,14 +8,9 @@
 	language = "russian"
 }
 
-@misc{info_Enigma1,
-	title="Алгоритм переносной шифровальной машины Энигма [Электронный ресурс].",
-	howpublished="Режим доступа: \url{https://cyberleninka.ru/article/n/algoritm-perenosnoy-shifrovalnoy-mashiny-enigma/viewer} (дата обращения: 04.10.2024)."
-}
-
-@misc{info_Enigma2,
-	title="Программная реализация шифровальной машины «Энигма» на языке Си [Электронный ресурс].",
-	howpublished="Режим доступа: \url{https://habr.com/ru/articles/721790/} (дата обращения: 04.10.2024)."
+@misc{info_DES,
+	title="DES [Электронный ресурс].",
+	howpublished="Режим доступа: \url{https://ru.wikipedia.org/wiki/DES} (дата обращения: 15.10.2024)."
 }
 
 
