--- a/info_sec/labs/lab_02/report/06-implementation.tex
+++ b/info_sec/labs/lab_02/report/06-implementation.tex
@@ -7,7 +7,6 @@
 К программе предъявляется ряд требований:
 
 \begin{itemize} [label=--]
-	\item мощность алфавита не должна превышать 64 символа;
 	\item программа должна предоставлять возможность шифрования и расшифровки произвольного файла, а также текстового сообщения;
 	\item программа должна корректно работать с пустым однобайтовым файлом;
 	\item программа должна уметь обрабатывать файл архива.
@@ -23,8 +22,8 @@
 
 \begin{itemize}
 	\item \texttt{main.cpp} --- файл, содержащий точку входа в программу;
-	\item \texttt{enigma.cpp} --- модуль, реализующий шифровальную машину <<Энигма>>;
-	\item \texttt{encoder.cpp} --- модуль, реализующий -кодировщик.
+	\item \texttt{DES.cpp} --- модуль, реализующий алгоритм DES;
+	\item \texttt{PCBC.cpp} --- модуль, реализующий шифрование в режиме PCBC.
 \end{itemize}
 
 \section{Тестирование}
@@ -36,15 +35,15 @@
 			\label{tbl:cmpResponseTimeByRequests_s_withoutCache}
 			\begin{tabular}{|r|r|}
 				\hline
-				\bfseries \makecell{Входная строка} & \bfseries \makecell{Шифрованная строка} \\
+				\bfseries \makecell{Входная строка} & \bfseries \makecell{Шифрованная строка}\\
 				\hline
-				HELLO & XFPRG  \\ 
+				Hello & g▓ùδÄ☺v┼  \\ 
 				\hline
-				XFPRG & HELLO  \\ 
+				g▓ùδÄ☺v┼  & Hello  \\ 
 				\hline
-				HEL LO & XFP RG  \\ 
+				B & h∩▐í'(Ñ!  \\ 
 				\hline
-				XFP RG & HEL LO  \\ 
+				h∩▐í'(Ñ! & B  \\ 
 				\hline
 			\end{tabular}
 		\end{threeparttable}
@@ -53,63 +52,94 @@
 
 Все тесты были успешно пройдены. Тесты с файлами были также успешно пройдены.
 
-\clearpage
-
 \section{Реализации алгоритмов}
 
-В листинге \ref{lst:enigma-declaration.txt} представлено объявление класса, реализующего шифровальную машину <<Энигма>>.
+На листинге \ref{lst:des.txt} представлена функция, реализующая алгоритм DES.
+
+На листингах \ref{lst:gen-round-keys-part1.txt} и \ref{lst:gen-round-keys-part2.txt} представлена функция, реализующая генерацию ключей для каждого раунда шифрования.
+
+На листинге \ref{lst:round.txt}  представлена функция, реализующая раунд шифрования.
+
+На листингах \ref{lst:f_part1.txt} и \ref{lst:f_part2.txt} представлена реализация функции Фейстеля.
+
+На листинге \ref{lst:pcbc.txt}  представлена реализация шифрования в режиме PCBC.
 
 \includelisting
-{enigma-declaration.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-{Объявление класса, реализующего шифровальную машину <<Энигма>>} % Подпись листинга
+{des.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+{Функция, реализующая алгоритм DES} % Подпись листинга
+
+\includelisting
+{gen-round-keys-part1.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+{Функция, реализующая генерацию ключей для каждого раунда шифрования (начало)} % Подпись листинга
 
 \clearpage
 
-В листинге \ref{lst:encrypt-char-by-code-impl.txt} представлена реализация алгоритма шифрования символа.
+\includelisting
+{gen-round-keys-part2.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+{Функция, реализующая генерацию ключей для каждого раунда шифрования (конец)} % Подпись листинга
 
 \includelisting
-{encrypt-char-by-code-impl.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-{Реализация шифрования символа} % Подпись листинга
-
-В листинге \ref{lst:encrypt-impl.txt} представлена реализация алгоритма шифрования символа c использованием кодировщика.
+{round.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+{Функция, реализующая раунд шифрования} % Подпись листинга
 
 \includelisting
-{encrypt-impl.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-{Реализация шифрования символа с использованием кодировщика} % Подпись листинга
-
-В листингах \ref{lst:encrypt-string-impl-part1.txt}  и \ref{lst:encrypt-string-impl-part2.txt} представлена реализация шифрования строки.
+{f_part1.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+{Реализация функции Фейстеля (начало)} % Подпись листинга
 
 \includelisting
-{encrypt-string-impl-part1.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-{Реализация шифрования строки (начало)} % Подпись листинга
+{f_part2.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+{Реализация функции Фейстеля (конец)} % Подпись листинга
 
 \includelisting
-{encrypt-string-impl-part2.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-{Реализация шифрования строки (конец)} % Подпись листинга
-
-В листингах \ref{lst:encrypt-file-impl-part1.txt}  и \ref{lst:encrypt-file-impl-part2.txt} представлена реализация шифрования произвольного файла.
-
-\includelisting
-{encrypt-file-impl-part1.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-{Реализация шифрования произовльного файла (начало)} % Подпись листинга
-
-\includelisting
-{encrypt-file-impl-part2.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-{Реализация шифрования произовльного файла (конец)} % Подпись листинга
-
+{pcbc.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+{Реализация шифрования в режиме PCBC} % Подпись листинга
+%\clearpage
+%
+%В листинге \ref{lst:encrypt-char-by-code-impl.txt} представлена реализация алгоритма шифрования символа.
+%
+%\includelisting
+%{encrypt-char-by-code-impl.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+%{Реализация шифрования символа} % Подпись листинга
+%
+%В листинге \ref{lst:encrypt-impl.txt} представлена реализация алгоритма шифрования символа c использованием кодировщика.
+%
+%\includelisting
+%{encrypt-impl.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+%{Реализация шифрования символа с использованием кодировщика} % Подпись листинга
+%
+%В листингах \ref{lst:encrypt-string-impl-part1.txt}  и \ref{lst:encrypt-string-impl-part2.txt} представлена реализация шифрования строки.
+%
+%\includelisting
+%{encrypt-string-impl-part1.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+%{Реализация шифрования строки (начало)} % Подпись листинга
+%
 %\includelisting
 %{encrypt-string-impl-part2.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
 %{Реализация шифрования строки (конец)} % Подпись листинга
-
-%В листингах \ref{lst:search-tree-part1.txt} и \ref{lst:search-tree-part2.txt} представлена реализация функции поиска в ДДП и АВЛ-дереве.
+%
+%В листингах \ref{lst:encrypt-file-impl-part1.txt}  и \ref{lst:encrypt-file-impl-part2.txt} представлена реализация шифрования произвольного файла.
 %
 %\includelisting
-%{search-tree-part1.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-%{Реализация функции поиска в ДДП и АВЛ-дереве (начало)} % Подпись листинга
+%{encrypt-file-impl-part1.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+%{Реализация шифрования произовльного файла (начало)} % Подпись листинга
 %
 %\includelisting
-%{search-tree-part2.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-%{Реализация функции поиска в ДДП и АВЛ-дереве (конец)} % Подпись листинга
+%{encrypt-file-impl-part2.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+%{Реализация шифрования произовльного файла (конец)} % Подпись листинга
+%
+%%\includelisting
+%%{encrypt-string-impl-part2.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+%%{Реализация шифрования строки (конец)} % Подпись листинга
+%
+%%В листингах \ref{lst:search-tree-part1.txt} и \ref{lst:search-tree-part2.txt} представлена реализация функции поиска в ДДП и АВЛ-дереве.
+%%
+%%\includelisting
+%%{search-tree-part1.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+%%{Реализация функции поиска в ДДП и АВЛ-дереве (начало)} % Подпись листинга
+%%
+%%\includelisting
+%%{search-tree-part2.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+%%{Реализация функции поиска в ДДП и АВЛ-дереве (конец)} % Подпись листинга
 
 \section*{Вывод}
 
