--- a/info_sec/labs/lab_02/report/08-conclusion.tex
+++ b/info_sec/labs/lab_02/report/08-conclusion.tex
@@ -4,9 +4,9 @@
 В ходе выполнения лабораторной работы были решены следующие задачи:
 
 \begin{enumerate}[label={\arabic*)}]
-	\item описан алгоритм работы шифровальной машины <<Энигма>>;
+	\item описан алгоритм DES с режимом PCBC;
 	\item выбраны средства программной реализации;
 	\item реализован данный алгоритм.
 \end{enumerate}
 
-Цель работы, а именно программная реализация аналога шифровальной машины <<Энигма>>, также была достигнута.
+Цель работы, а именно реализация программы шифрования симметричным алгоритмом DES с применением режима PCBC, также была достигнута.
