--- a/info_sec/labs/lab_02/report/report.tex
+++ b/info_sec/labs/lab_02/report/report.tex
@@ -22,10 +22,10 @@
 
 \include{03-introduction}
 \include{04-analysis}
-%\include{05-design}
-%\include{06-implementation}
+\include{05-design}
+\include{06-implementation}
 %\include{07-research}
-%\include{08-conclusion}
+\include{08-conclusion}
 
 \makebibliography
 
