сделал без отчета

--- a/info_sec/labs/lab_03/report/04-analysis.tex
+++ b/info_sec/labs/lab_03/report/04-analysis.tex
@@ -1,6 +1,6 @@
 \chapter{Аналитический раздел}
 
-В данном разделе будет кратко описана история создания алгоритма DES, будет приведено его формально описание, а также будет формально описан режим шифрования PCBC.
+В данном разделе будет кратко описана история создания алгоритма AES, будет приведено его формально описание, а также будет формально описан режим шифрования CFB.
 
 \section{История создания алгоритма DES}
 
