--- a/info_sec/labs/lab_03/report/report.tex
+++ b/info_sec/labs/lab_03/report/report.tex
@@ -21,7 +21,7 @@
 \maketableofcontents
 
 \include{03-introduction}
-%\include{04-analysis}
+\include{04-analysis}
 %\include{05-design}
 %\include{06-implementation}
 %\include{07-research}
