--- a/info_sec/labs/lab_03/report/05-design.tex
+++ b/info_sec/labs/lab_03/report/05-design.tex
@@ -1,38 +1,24 @@
 \chapter{Конструкторский раздел}
 
-На рисунках \ref{img:PCBC}--\ref{img:function} представлены схемы алгоритмов DES, раунда DES, функции Фейстеля, а также схема работы шифрования в режиме PCBC.
+На рисунках \ref{img:aes} представлены схемы алгоритма AES, раунда AES.
 
 \includeimage
-{PCBC} % Имя файла без расширения (файл должен быть расположен в директории inc/img/)
+{aes} % Имя файла без расширения (файл должен быть расположен в директории inc/img/)
 {f} % Обтекание (без обтекания)
-{h} % Положение рисунка (см. figure из пакета float)
-{1\textwidth} % Ширина рисунка
-{Схема алгоритма работы шифрования в режиме PCBC} % Подпись рисунка
-
-\includeimage
-{des} % Имя файла без расширения (файл должен быть расположен в директории inc/img/)
-{f} % Обтекание (без обтекания)
-{h} % Положение рисунка (см. figure из пакета float)
+{ht!} % Положение рисунка (см. figure из пакета float)
 {0.6\textwidth} % Ширина рисунка
-{Схема алгоритма DES} % Подпись рисунка
+{Схема шифровального алгоритма AES} % Подпись рисунка
 
-\includeimage
-{round} % Имя файла без расширения (файл должен быть расположен в директории inc/img/)
-{f} % Обтекание (без обтекания)
-{H} % Положение рисунка (см. figure из пакета float)
-{0.7\textwidth} % Ширина рисунка
-{Схема алгоритма раунда шифрования в алгоритме DES} % Подпись рисунка
-
-\includeimage
-{function} % Имя файла без расширения (файл должен быть расположен в директории inc/img/)
-{f} % Обтекание (без обтекания)
-{H} % Положение рисунка (см. figure из пакета float)
-{0.5\textwidth} % Ширина рисунка
-{Схема алгоритма функции Фейстеля} % Подпись рисунка
+%\begin{figure}[ht!]
+%	\centering
+%	\includegraphics[width=0.6\linewidth]{img/aes.png}
+%	\caption{Схема шифровального алгоритма AES}
+%	\label{img:aes}
+%\end{figure}
 
 \section*{Вывод}
 
-В данном разделе были представлены схемы алгоритмов DES, раунда DES, функции Фейстеля, а также схема работы шифрования в режиме PCBC.
+В этом разделе была представлена схема алгоритма шифрования AES.
 
 
 
