--- a/info_sec/labs/lab_03/report/06-implementation.tex
+++ b/info_sec/labs/lab_03/report/06-implementation.tex
@@ -22,8 +22,8 @@
 
 \begin{itemize}
 	\item \texttt{main.cpp} --- файл, содержащий точку входа в программу;
-	\item \texttt{DES.cpp} --- модуль, реализующий алгоритм DES;
-	\item \texttt{PCBC.cpp} --- модуль, реализующий шифрование в режиме PCBC.
+	\item \texttt{AES.cpp} --- модуль, реализующий алгоритм AES;
+	\item \texttt{CFB.cpp} --- модуль, реализующий шифрование в режиме CFB.
 \end{itemize}
 
 \section{Тестирование}
@@ -54,45 +54,61 @@
 
 \section{Реализации алгоритмов}
 
-На листинге \ref{lst:des.txt} представлена функция, реализующая алгоритм DES.
+На листинге \ref{lst:aes.txt} представлена функция, реализующая алгоритм DES.
 
-На листингах \ref{lst:gen-round-keys-part1.txt} и \ref{lst:gen-round-keys-part2.txt} представлена функция, реализующая генерацию ключей для каждого раунда шифрования.
+На листинге \ref{lst:key-expansion.txt} представлена функция, реализующая генерацию ключей для каждого раунда шифрования.
 
-На листинге \ref{lst:round.txt}  представлена функция, реализующая раунд шифрования.
+На листинге \ref{lst:add-round-key.txt}  представлена функция, реализующая добавление ключа раунда к state.
 
-На листингах \ref{lst:f_part1.txt} и \ref{lst:f_part2.txt} представлена реализация функции Фейстеля.
+На листинге \ref{lst:sub-bytes.txt}  представлена функция, реализующая нелинейную замену байт в state с помощью sbox.
 
-На листинге \ref{lst:pcbc.txt}  представлена реализация шифрования в режиме PCBC.
+На листинге \ref{lst:shift-rows.txt}  представлена функция, реализующая циклический сдвиг строк state влево в зависимости от номера строк.
 
+На листинге \ref{lst:mix-columns.txt}  представлена функция, реализующая процедуру MixColumns.
+
+%На листингах \ref{lst:f_part1.txt} и \ref{lst:f_part2.txt} представлена реализация функции Фейстеля.
+%
+%На листинге \ref{lst:pcbc.txt}  представлена реализация шифрования в режиме PCBC.
+%
 \includelisting
-{des.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-{Функция, реализующая алгоритм DES} % Подпись листинга
-
-\includelisting
-{gen-round-keys-part1.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-{Функция, реализующая генерацию ключей для каждого раунда шифрования (начало)} % Подпись листинга
+{aes.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+{Функция, реализующая алгоритм AES} % Подпись листинга
 
 \clearpage
 
 \includelisting
-{gen-round-keys-part2.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-{Функция, реализующая генерацию ключей для каждого раунда шифрования (конец)} % Подпись листинга
+{key-expansion.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+{Функция, реализующая генерацию ключей раундов} % Подпись листинга
 
 \includelisting
-{round.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-{Функция, реализующая раунд шифрования} % Подпись листинга
+{add-round-key.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+{Функция, реализующая добавление ключа раунда к state} % Подпись листинга
+
+\clearpage
 
 \includelisting
-{f_part1.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-{Реализация функции Фейстеля (начало)} % Подпись листинга
+{sub-bytes.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+{Функция, реализующая нелинейную замену байт в state с помощью sbox} % Подпись листинга
 
 \includelisting
-{f_part2.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-{Реализация функции Фейстеля (конец)} % Подпись листинга
+{shift-rows.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+{Функция, реализующая циклический сдвиг строк state влево в зависимости от номера строки} % Подпись листинга
 
 \includelisting
-{pcbc.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
-{Реализация шифрования в режиме PCBC} % Подпись листинга
+{mix-columns.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+{Функция, реализующая процедуру MixColumns} % Подпись листинга
+
+%\includelisting
+%{f_part1.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+%{Реализация функции Фейстеля (начало)} % Подпись листинга
+%
+%\includelisting
+%{f_part2.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+%{Реализация функции Фейстеля (конец)} % Подпись листинга
+%
+%\includelisting
+%{pcbc.txt} % Имя файла с расширением (файл должен быть расположен в директории inc/lst/)
+%{Реализация шифрования в режиме PCBC} % Подпись листинга
 %\clearpage
 %
 %В листинге \ref{lst:encrypt-char-by-code-impl.txt} представлена реализация алгоритма шифрования символа.
