--- a/info_sec/labs/lab_03/report/report.tex
+++ b/info_sec/labs/lab_03/report/report.tex
@@ -10,10 +10,10 @@
 {Информатика и системы управления} % Название факультета
 {Программное обеспечение ЭВМ и информационные технологии}
 % Название кафедры
-{лабораторной работа №2} % Название работы (в дат. падеже)
+{лабораторной работа №3} % Название работы (в дат. падеже)
 {Защита информации} % Название курса (необязательный аргумент)
 {Алгоритм AES} % Тема работы
-{2} % Номер варианта (необязательный аргумент)
+{3} % Номер варианта (необязательный аргумент)
 {Лысцев~Н.~Д./ИУ7-73Б} % Номер группы
 {Чиж~И.~С.} % ФИО студента
 {}
@@ -22,8 +22,8 @@
 
 \include{03-introduction}
 \include{04-analysis}
-%\include{05-design}
-%\include{06-implementation}
+\include{05-design}
+\include{06-implementation}
 %\include{07-research}
 %\include{08-conclusion}
 
