--- a/info_sec/labs/lab_03/report/06-implementation.tex
+++ b/info_sec/labs/lab_03/report/06-implementation.tex
@@ -54,7 +54,7 @@
 
 \section{Реализации алгоритмов}
 
-На листинге \ref{lst:aes.txt} представлена функция, реализующая алгоритм DES.
+На листинге \ref{lst:aes.txt} представлена функция, реализующая алгоритм AES.
 
 На листинге \ref{lst:key-expansion.txt} представлена функция, реализующая генерацию ключей для каждого раунда шифрования.
 
