--- a/info_sec/labs/lab_03/report/report.tex
+++ b/info_sec/labs/lab_03/report/report.tex
@@ -25,7 +25,7 @@
 \include{05-design}
 \include{06-implementation}
 %\include{07-research}
-%\include{08-conclusion}
+\include{08-conclusion}
 
 \makebibliography
 
