--- a/info_sec/labs/lab_03/report/08-conclusion.tex
+++ b/info_sec/labs/lab_03/report/08-conclusion.tex
@@ -4,9 +4,9 @@
 В ходе выполнения лабораторной работы были решены следующие задачи:
 
 \begin{enumerate}[label={\arabic*)}]
-	\item описан алгоритм DES с режимом PCBC;
+	\item описан алгоритм AES с режимом CFB;
 	\item выбраны средства программной реализации;
 	\item реализован данный алгоритм.
 \end{enumerate}
 
-Цель работы, а именно реализация программы шифрования симметричным алгоритмом DES с применением режима PCBC, также была достигнута.
+Цель работы, а именно реализация программы шифрования симметричным алгоритмом AES с применением режима CFB, также была достигнута.
